Fix the bug that bar graph remains invisible if some submit a review with vacant content on "bring" or "attendance"
Changed display:none on sp-header-search-box temporally.

--- a/public/css/aplus_style.css
+++ b/public/css/aplus_style.css
@@ -271,6 +271,10 @@ footer .allrights {
   margin: 0 14px;
 }
 @media screen and (max-width: 47.9375rem) {
+
+  #header-search-box{
+    display: none;
+  }
   /*top start*/
   .bland_img{
     width: 80%;
